Fix: warning 제거(get(0) replace to getFirst())